# PortableOfflineTranslator

./: .gitmodules  README.md  RFA.md  start_lcd_display.sh  start_pipeline.sh  start_spi_interface.sh  translator.crswap  translator.drawio
PCB_Backup/: PlanB.kicad_prl  PlanB.kicad_pro
PCB_Backup/PlanB/: IO.kicad_sch  PlanB.kicad_prl  _autosave-MCU.kicad_sch  fp-info-cache
PlanB/: #auto_saved_files#  IO.kicad_sch  PlanB.kicad_sch
PlanB/PlanB/: #auto_saved_files#  MCU.kicad_sch  PlanB.kicad_sch  PowerSS.kicad_sch
Portable Offline Translator/: #auto_saved_files#  IO.kicad_sch  IO.kicad_sch-bak  MCU.kicad_sch  Netlist.net  Portable Offline Translator.kicad_pcb  Portable Offline Translator.kicad_prl  Portable Offline Translator.kicad_pro  Portable Offline Translator.kicad_sch  fp-info-cache  fp-lib-table  powerSS.kicad_sch  sym-lib-table
Portable Offline Translator/Gerber/: Portable Offline Translator-B_Cu.gbr  Portable Offline Translator-B_Mask.gbr  Portable Offline Translator-B_Paste.gbr  Portable Offline Translator-B_Silkscreen.gbr  Portable Offline Translator-Edge_Cuts.gbr  Portable Offline Translator-F_Cu.gbr  Portable Offline Translator-F_Mask.gbr  (+4 more)
components/: list.txt
doc/: BOM.xlsx  ~$BOM.xlsx
output/: pipeline_mem_log.csv  plot_mem_usage.py
src/rspcm/: CMakeLists.txt  rebuild.sh  run_sample_tts.sh  run_testcases.sh  translation_request.sh
src/rspcm/config/: Dockerfile  build_docker.sh  run_docker.sh
src/rspcm/output/: translated_output.pcm  translated_text.txt
src/rspcm/pipeline/: CMakeLists.txt  main.cpp
src/rspcm/src/: speech_to_text.py
(+175 files in other folders)
